// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array should fail to parse arrays with invalid values 1`] = `
[
  {
    "code": "invalid_number",
    "message": "Expected value to be a number",
    "path": "1",
    "value": "2",
  },
]
`;

exports[`array should fail to parse non-arrays 1`] = `
[
  {
    "code": "invalid_array",
    "message": "Expected value to be an array",
    "path": "",
    "value": 0,
  },
]
`;

exports[`array the path property works within an object 1`] = `
[
  {
    "code": "invalid_number",
    "message": "Expected value to be a number",
    "path": "a[0]",
    "value": "1",
  },
]
`;
